# raytrace_cpu

./: .gitignore  .ninja_deps  .ninja_log  CLAUDE.md  CMakeLists.txt  LICENSE.md  README.md  angdist_jetpoint.cpp  beam_test.cpp  build.ninja  cmake.local  pointsource_sky.cpp  pointsource_sky_discfrac.cpp  raystart_jetpoint.cpp  source_solid_angle.cpp  trace_rays.cpp  trace_rays_vel.cpp
common/: geometry.h  jetpointsource.cpp  jetpointsource.h  pointsource_vel.h  raytracer.h  text_output.h
docs/: session_2026-02-21.md  session_2026-03-01.md  session_2026-03-02.md  session_2026-03-05.md
par_example/: caustic_discplane.par_example  caustic_imageplane.par_example  caustic_plane.par_example  caustic_sourceplane.par_example  emissivity.par_example  emissivity_rd.par_example  imageplane_disc_image.par_example  imageplane_disc_image_isco.par_example  imageplane_disc_image_rd.par_example
python/: Shakura.ipynb  Untitled1.ipynb  caustic_discplane.ipynb  caustic_discplane.py  caustic_imageplane.ipynb  caustic_imageplane.py  em.py  emissivity.ipynb  emissivity2d.ipynb  emissivity_profile.ipynb  line_from_image.ipynb  line_from_image.py  local_emissivity2d_look.ipynb  plot_caustic_discplane.py  plot_caustic_plane.py  plot_caustics.py  plot_for_ellipse_geo.ipynb  plot_imageplane.ipynb  wedged_disk_relationship.ipynb
python/.ipynb_checkpoints/: Shakura-checkpoint.ipynb  comparing_line_profiles-checkpoint.ipynb  emissivity-checkpoint.ipynb  emissivity2d-Copy1-checkpoint.ipynb  local_emissivity2d_look-checkpoint.ipynb  plot_for_ellipse_geo-checkpoint.ipynb  wedged_disk_relationship-checkpoint.ipynb
scripts/: run_angdist_jetpoint.sh
src/: CMakeLists.txt  angdist_point_plunge.cpp  angdist_point_vel.cpp  disc_source_photonfrac.cpp  disc_source_photonfrac_r.cpp  disc_source_return_angdist.cpp  emissivity.cpp  healpix_disc_source_photonfrac.cpp  healpix_to_disc.cpp  outflow.cpp  outflow_ent.cpp  pcyg.cpp  pcyg_rel.cpp  pcyg_sei.cpp  pointsource_mapper.cpp  trace_rays.cpp  trace_rays_imageplane.cpp  trace_rays_jetpoint.cpp
src/beams/: beam_test.cpp
src/caustic/: CMakeLists.txt  caustic_discplane.cpp  caustic_imageplane.cpp  caustic_plane.cpp  caustic_sourceplane.cpp
src/common/: CMakeLists.txt  beam.cpp  jetpointsource.cpp  kerr.h  par_file.h  pointsource.h  pointsource_vel.cpp  raytracer.cpp
src/emissivity/: CMakeLists.txt  emissivity.cpp  emissivity2d.cpp  emissivity_geometry.cpp  emissivity_rd.cpp
src/emissivity_2d/: CMakeLists.txt  emissivity_2d.cpp
src/healpix/: CMakeLists.txt  healpix_disc_source_photonfrac.cpp  healpix_to_disc.cpp
src/imageplane/: CMakeLists.txt  imageplane_disc_image.cpp  imageplane_disc_image_geometry.cpp  imageplane_disc_image_isco.cpp  imageplane_disc_image_rd.cpp
src/include/: array.h  disc.h  fits_output.h  gramschmidt_basis.h  healpix.h  kerr.h  par_args.h  par_file.h  progress_bar.h  spectrum.h  text_output.h
src/lamppost/: CMakeLists.txt  angdist_jetpoint.cpp  angdist_point_vel.cpp  pointsource_sky.cpp  pointsource_sky_discfrac.cpp  pointsource_to_disc.cpp  raystart_jetpoint.cpp  source_solid_angle.cpp
src/mapper/: CMakeLists.txt  mapper.cpp  mapper.h  mapper_imageplane.cpp  mapper_imageplane.h  mapper_pointsource.cpp  mapper_pointsource.h
src/outflow/: CMakeLists.txt  disc_wind.cpp  outflow.cpp  outflow_emis_bin.cpp  outflow_ent.cpp  outflow_spectrum.cpp  pcyg.cpp  pointsource_mapper.cpp
src/ray_paths/: CMakeLists.txt  trace_rays.cpp  trace_rays_imageplane.cpp  trace_rays_jetpoint.cpp  trace_rays_vel.cpp
src/raytracer/: CMakeLists.txt  beam.h  healpix_pointsource.cpp  healpix_pointsource.h  imageplane.cpp  imageplane.h  imageplane_bundles.h  jetpointsource.cpp  jetpointsource.h  log_imageplane.cpp  log_imageplane.h  mapper.cpp  mapper.h  mapper_pointsource.cpp  mapper_pointsource.h  pointsource.cpp  pointsource.h  ray_destination.h  raytrace_destination.h  raytracer.cpp  raytracer.h  source_tracer.cpp  source_tracer.h  sourcetracer_imageplane.cpp  sourcetracer_imageplane.h  stop_functs.cpp
src/return_radiation/: CMakeLists.txt  disc_source_photonfrac.cpp  disc_source_photonfrac_r.cpp  disc_source_return_angdist.cpp
src/source_tracer/: CMakeLists.txt  source_tracer.cpp  source_tracer.h  sourcetracer_imageplane.cpp  sourcetracer_imageplane.h
src/tests/: CMakeLists.txt  emissivity_rk45_plot.cpp  emissivity_rk45_plot.py  emissivity_rk45_test.cpp  emissivity_rk45_tol_sweep.py  gsl_test.cpp  integrator_perf_test.cpp  raytrace_rk4_test.cpp
